syntax = "proto3";

option go_package = "geostreamdb/proto";

package geostreamdb;


service Worker {
    rpc SendPing(PingRequest) returns (PingResponse) {}
    rpc GetPings(GetPingsRequest) returns (GetPingsResponse) {}
}

message PingRequest {
    string geohash = 1;
}

message PingResponse {
    bool success = 1;
}

message GetPingsRequest {
    string geohash = 1;
}

message GetPingsResponse {
    int64 count = 1;
    int64 timestamp = 2;
}